; ModuleID = '/home/carl/AnghaBench/TDengine/src/modules/monitor/src/extr_monitorSystem.c_monitorStartSystem.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/modules/monitor/src/extr_monitorSystem.c_monitorStartSystem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@monitor = common dso_local global %struct.TYPE_2__* null, align 8
@monitorInitConn = common dso_local global i32 0, align 4
@tscTmr = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @monitorStartSystem() #0 {
  %1 = load %struct.TYPE_2__*, %struct.TYPE_2__** @monitor, align 8
  %2 = icmp eq %struct.TYPE_2__* %1, null
  br i1 %2, label %3, label %5

3:                                                ; preds = %0
  %4 = call i32 (...) @monitorInitSystem()
  br label %5

5:                                                ; preds = %3, %0
  %6 = load i32, i32* @monitorInitConn, align 4
  %7 = load i32, i32* @tscTmr, align 4
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** @monitor, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = call i32 @taosTmrReset(i32 %6, i32 10, i32* null, i32 %7, i32* %9)
  ret i32 0
}

declare dso_local i32 @monitorInitSystem(...) #1

declare dso_local i32 @taosTmrReset(i32, i32, i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
